# AppShift

./: Apps Ubuntu.txt  CMakeLists.txt  README.md  Tutorial de Configuração do Projeto AppShift.md  meson.build
data/: appshift.desktop  org.example.AppShift.gresource.xml
data/ui/: MainWindow.ui  style.css
src/: application.vala  main.vala  utils.vala  window.vala
